# notification-daemon

./: .gitignore  AUTHORS  ChangeLog  ChangeLog.pre-git  Makefile.am  NEWS  README  acinclude.m4  autogen.sh  configure.ac  nd-test-compile  notification-daemon.conf  notification-daemon.doap  notification-daemon.service.in  notification-daemon.spec.in  notify-daemon.service.in  shell-funcs
data/: Makefile.am  notification-daemon-autostart.desktop.in.in  notification-daemon.desktop.in  notification-daemon.desktop.in.in  notification-daemon.schemas.in
po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  POTFILES.skip  an.po  ar.po  as.po  be.po  bg.po  bn.po  bn_IN.po  bs.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  gu.po  he.po  hr.po  hu.po  id.po  it.po  ja.po  km.po  kn.po  ko.po  lt.po  lv.po  (+32 more)
src/: BaseNotification.cc  BaseNotification.cpp  BaseNotifier.cc  BaseNotifier.hh  ConsoleNotification.cc  ConsoleNotification.cpp  ConsoleNotifier.cc  ConsoleNotifier.hh  Hint.hh  Image.cc  Image.hh  Makefile.am  Notification.cc  Notification.hh  PopupNotification.cc  PopupNotification.cpp  PopupNotification.hh  PopupNotifier.cc  PopupNotifier.cpp  PopupNotifier.hh  base-notifier.cpp  console-notifier.cpp  daemon.c  daemon.h  dbus-compat.h  eggnotificationbubblewidget.c  eggnotificationbubblewidget.h  engines.c  engines.h  image.cpp  logging.cc  logging.cpp  logging.h  main.c  main.cc  main.cpp  nd-bubble.c  nd-bubble.h  nd-daemon.c  nd-daemon.h  (+21 more)
src/capplet/: Makefile.am  notification-properties.c  notification-properties.desktop.in  notification-properties.glade  notification-properties.ui
src/daemon/: Makefile.am  daemon.c  daemon.h  engines.c  engines.h  sound.c  sound.h  stack.c  stack.h
src/themes/: Makefile.am
src/themes/bubble/: Makefile.am  eggnotificationbubblewidget.c  theme.c
src/themes/slider/: Makefile.am  theme.c
src/themes/standard/: Makefile.am  theme.c
themes/: Makefile.am
themes/bubble/: Makefile.am  eggnotificationbubblewidget.c  eggnotificationbubblewidget.h  theme.c
themes/standard/: Makefile.am  bgbox.c  bgbox.h  theme.c
